...
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_unlock">Unlock</string>
    <string name="item_hint_timeunlock">Time to unlock</string>
    <string name="hint_item_unlock_button">Unlock</string>
    <string name="hint_item_buy_button">Buy</string>
    <string name="options_button_filter">Filter</string>
    <string name="distance_to_start">Distance to start</string>
    <string name="hunt_length">Hunt Length</string>
    <string name="rating">Rating</string>
    <string name="fragment_tag_hint_view">fragment_hint_view</string>
    <string name="fragment_tag_game_map">fragment_game_map</string>
...
